<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.src.productos.MainActivity"
    tools:showIn="@layout/activity_main">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/sCodigo"
        android:id="@+id/idTextCodigo"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/idCodigo"
        android:layout_below="@+id/idTextCodigo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/sDescripcion"
        android:id="@+id/idTextDescripcion"
        android:layout_below="@+id/idCodigo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/idDescripcion"
        android:layout_below="@+id/idTextDescripcion"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/sPrecio"
        android:id="@+id/idTextPrecio"
        android:layout_below="@+id/idDescripcion"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/idPrecio"
        android:layout_below="@+id/idTextPrecio"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sAlta"
        android:id="@+id/bAlta"
        android:layout_below="@+id/idPrecio"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="Alta"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sConsultaCodigo"
        android:id="@+id/bConsultaCodigo"
        android:layout_below="@+id/bAlta"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="ConsultaPorCodigo"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sConsultaDescripcion"
        android:id="@+id/bConsultaDescripcion"
        android:layout_below="@+id/bConsultaCodigo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="ConsultaPorDescripcion"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sBajaCodigo"
        android:id="@+id/bBaja"
        android:layout_below="@+id/bConsultaDescripcion"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="BajaPorCodigo"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sModificacion"
        android:id="@+id/bModificar"
        android:layout_below="@+id/bBaja"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="Modificacion"/>


</RelativeLayout>
